--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,4 @@
 # Don't check auto-generated stuff into git
-coverage
 node_modules
-stats.json
-.cache-loader
-
-# Cruft
-.DS_Store
-npm-debug.log
-.idea
-.yo-rc.json
-.magic_libs/
-libDist
-yarn.lock
+out
 package-lock.json
-dist
-*.d.ts
-dll_copy
