--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 16.x
-          cache: npm
+          node-version: 14.x
+          cache: yarn
   build:
     needs: test
     name: Build (${{ matrix.os }} - ${{ matrix.arch }})
