--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           node-version: 14.x
           cache: yarn
-          cache-dependency-path: './server/yarn.json'
+          cache-dependency-path: '**/yarn.json'
   build:
     needs: test
     name: Build (${{ matrix.os }} - ${{ matrix.arch }})
