--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,24 +54,24 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 14.x
-      - name: Set Forge RPM workaround
-        # Tracking issue: https://github.com/electron/forge/issues/3102
-        if: matrix.os == 'ubuntu-latest'
-        run: echo "%__strip /bin/true" >> ~/.rpmmacros
-      - name: Set MacOS signing certs
-        if: matrix.os == 'macOS-latest'
-        run: chmod +x tools/add-macos-cert.sh && ./tools/add-macos-cert.sh
-        env:
-          MACOS_CERT_P12: ${{ secrets.MACOS_CERT_P12 }}
-          MACOS_CERT_PASSWORD: ${{ secrets.MACOS_CERT_PASSWORD }}
-      - name: Set Windows signing certificate
-        if: matrix.os == 'windows-latest'
-        continue-on-error: true
-        id: write_file
-        uses: timheuer/base64-to-file@48657ba25c726c2e3dcf02efa3639fff9b3d587e # v1.2
-        with:
-          fileName: 'win-certificate.pfx'
-          encodedString: ${{ secrets.WINDOWS_CODESIGN_P12 }}
+      # - name: Set Forge RPM workaround
+      #   # Tracking issue: https://github.com/electron/forge/issues/3102
+      #   if: matrix.os == 'ubuntu-latest'
+      #   run: echo "%__strip /bin/true" >> ~/.rpmmacros
+      # - name: Set MacOS signing certs
+      #   if: matrix.os == 'macOS-latest'
+      #   run: chmod +x tools/add-macos-cert.sh && ./tools/add-macos-cert.sh
+      #   env:
+      #     MACOS_CERT_P12: ${{ secrets.MACOS_CERT_P12 }}
+      #     MACOS_CERT_PASSWORD: ${{ secrets.MACOS_CERT_PASSWORD }}
+      # - name: Set Windows signing certificate
+      #   if: matrix.os == 'windows-latest'
+      #   continue-on-error: true
+      #   id: write_file
+      #   uses: timheuer/base64-to-file@48657ba25c726c2e3dcf02efa3639fff9b3d587e # v1.2
+      #   with:
+      #     fileName: 'win-certificate.pfx'
+      #     encodedString: ${{ secrets.WINDOWS_CODESIGN_P12 }}
       - name: Install
         run: yarn --network-timeout 100000 || yarn --network-timeout 100000 || yarn --network-timeout 100000
       - name: Make
