--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,13 +36,9 @@ jobs:
         # 32-bit Linux unsupported as of 2019: https://www.electronjs.org/blog/linux-32bit-support
         os: [ macOS-latest, windows-latest]
         arch: [ x64, arm64 ]
-        # include:
+        include:
         - os: windows-latest
           arch: ia32
-        # Publishing artifacts for multiple Windows architectures has
-        # a bug which can cause the wrong architecture to be downloaded
-        # for an update, so until that is fixed, only build Windows x64
-        # exclude:
         - os: windows-latest
           arch: arm64
 
