--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,9 +82,7 @@ jobs:
         with:
           name: ${{ matrix.os }}
           path: out/make/**/*
-      # out/**/*.nupkg
-      #       out/**/*setup*.exe
-      #       out/**/RELEASES
+      
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
@@ -95,4 +93,7 @@ jobs:
           files: |
             out/**/*.dmg
             out/**/*.zip
+            out/**/*.nupkg
+            out/**/*setup*.exe
+            out/**/RELEASES
             
