--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ macOS-latest, windows-latest]
+        os: [ windows-latest]
         arch: [ x64, arm64 ]
         include:
         - os: windows-latest
